period 삽입 부분 속도 이슈로 인해 jdbc 배치 삽입적용